# backend

./: .gitignore
practice_1/: Makefile  pyproject.toml
practice_1/task_1/app/: __init__.py
practice_1/task_1/app/math/: math.py
practice_1/task_1/app/templates/: base.html  users.html
practice_1/task_1/app/user/: db.py  model.py  user.py
practice_1/task_2/: app.py
practice_1/task_2/templates/: cart.html  index.html
practice_2/: .env.example  requirements.txt
practice_2/articles/: models.py  urls.py  views.py
practice_2/articles/fixtures/: initial_data.json
practice_2/articles/migrations/: 0001_initial.py
practice_2/blogs/: models.py  views.py
practice_2/blogs/migrations/: 0001_initial.py
practice_2/django_project/: settings.py  urls.py
practice_2/templates/: 404.html
practice_2/templates/includes/: nav.html  pagination.html
practice_3/articles/: filters.py  managers.py  models.py  urls.py  views.py
practice_3/base/: views.py
practice_3/django_project/: settings.py  urls.py
practice_4/: requirements.txt
practice_4/libapi/: asgi.py  settings.py  urls.py
practices_3_and_5/: requirements.txt
practices_3_and_5/articles/: admin.py  decorators.py  forms.py  models.py  sitemaps.py  views.py
practices_3_and_5/base/: utils.py
practices_3_and_5/blogs/: urls.py
practices_3_and_5/django_project/: settings.py  urls.py
practices_3_and_5/templates/: base.html
practices_3_and_5/users/: forms.py  urls.py  views.py
practices_4_and_5/: manage.py  requirements.txt
practices_4_and_5/libapi/: settings.py  urls.py  wsgi.py
(+31 files in other folders)
